# audio-generation-based-on-IndexTTS2

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup_env.ps1  setup_env.sh
examples/: emotion_schema_example.json
examples/input_template/: script.ass
stable_dubbing/: __init__.py  audio_assemble.py  boundary_split.py  config.py  duration_align.py  emotion_plan.py  emotion_prepare.py  evaluation.py  generation_report.py  generation_units.py  main.py  pause_detector.py  pause_repair.py  pause_review.py  recombine.py  report.py  sentence_groups.py  silence_cleanup.py  speaker_map.py  subtitle_parser.py  tts_indextts2.py  utils.py  video_mux.py
tests/: test_ass_parser.py  test_boundary_split.py  test_cli_group_commands.py  test_duration_align.py  test_emotion_plan.py  test_generation_retry.py  test_generation_units.py  test_main_paths.py  test_pause_detector.py  test_recombine.py  test_sentence_groups.py  test_silence_cleanup.py  test_speaker_map.py  test_unit_synthesis.py
